Changes on Chandu last 6 componnets

--- a/src/app/components/templatetype/templatetype.component.html
+++ b/src/app/components/templatetype/templatetype.component.html
@@ -32,7 +32,7 @@
                 <div class="row " style="padding-bottom: 10px;">
                   <div class="col-md-9"></div>
                   <div class="col-md-1">
-                    <button (click)="GetInstitutionAddress()" class="btn btn-primary"  >Search</button>
+                    <button (click)=" GetTemplateType()" class="btn btn-primary"  >Search</button>
                   </div>
               </div>
   
