--- a/src/app/components/taskcommentdocuments/taskcommentdocuments.component.html
+++ b/src/app/components/taskcommentdocuments/taskcommentdocuments.component.html
@@ -21,7 +21,7 @@
                             <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
                         </select> -->
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="taskcommentdocuments.QulificationTypeId" placeholder="TaskCommentId" />
+                            [(ngModel)]="taskcommentdocuments.TaskCommentId" placeholder="TaskCommentId" />
                     </div>
 
                     <br><br>
