--- a/src/app/components/yearsemester/yearsemester.component.html
+++ b/src/app/components/yearsemester/yearsemester.component.html
@@ -14,12 +14,15 @@
                             [(ngModel)]="yearsemester.Id" placeholder="Id">
                     </div>
                     <div class="col-md-3">
-                        CYearsId :
+                        CYears :
                     </div>
                     <div class="col-md-3">
+                        <select name="" id="" [(ngModel)]="yearsemester.CYearsId" class="form-control"> 
+                            <option  *ngFor="let item of cyearsData" value="{{item.Id}}">{{item.Name}}</option>
+                        </select>
                       
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="yearsemester.CYearsId" placeholder="CYearsId" />
+                        <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="yearsemester.CYearsId" placeholder="CYearsId" /> -->
                     </div>
 
                     <br><br>
@@ -27,8 +30,11 @@
                         SemesterId :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="yearsemester.SemesterId" placeholder="SemesterId" />
+                        <select name="" id="" [(ngModel)]="yearsemester.SemesterId" class="form-control"> 
+                            <option  *ngFor="let item of semestersData" value="{{item.Id}}">{{item.Name}}</option>
+                        </select>
+                        <!-- <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="yearsemester.SemesterId" placeholder="SemesterId" /> -->
                     </div>
 
                     <br><br>
