Bhanu changes ddl

--- a/src/app/components/institutionaddress/institutionaddress.component.html
+++ b/src/app/components/institutionaddress/institutionaddress.component.html
@@ -9,7 +9,7 @@
 
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        <b>Institution :</b>
+                        <b>InstitutionId :</b>
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="institutionaddress.InstitutionId" class="form-control">
@@ -58,7 +58,7 @@
                     </div>
                     <br><br>
                     <div class="col-md-3">
-                        <b> CountryId :</b>
+                        <b> Country :</b>
                     </div>
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="institutionaddress.CountryId" class="form-control">
