--- a/src/app/components/sprinttasks/sprinttasks.component.html
+++ b/src/app/components/sprinttasks/sprinttasks.component.html
@@ -7,27 +7,37 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        SprintId :
+                        Sprint :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="sprinttasks.SprintId" placeholder="SprintId">
+                        <select name="" id="" name="SprintId" [(ngModel)]="sprinttasks.SprintId">
+                            <option *ngFor="let item of sprintData" value="{{item.Id}}" > {{item.Name}} </option>
+                           </select>
+                        <!-- <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="sprinttasks.SprintId" placeholder="SprintId"> -->
                     </div>
                     <div class="col-md-3">
-                        TaskId :
+                        Task :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="sprinttasks.TaskId" placeholder="TaskId" />
+
+                        <select name="" id="" name="TaskId" [(ngModel)]="sprinttasks.TaskId">
+                            <option *ngFor="let item of taskData" value="{{item.Id}}" > {{item.Name}} </option>
+                           </select>
+                        <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="sprinttasks.TaskId" placeholder="TaskId" /> -->
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        StatusId :
+                        Status :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="sprinttasks.StatusId" placeholder="StatusId" />
+                        <select name="" id="" name="StatusId" [(ngModel)]="sprinttasks.StatusId">
+                            <option *ngFor="let item of statusData" value="{{item.Id}}" > {{item.Name}} </option>
+                           </select>
+                        <!-- <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="sprinttasks.StatusId" placeholder="StatusId" /> -->
                     </div>
 
                     <div class="col-md-3">
